--- a/inventario-ventas/index.html
+++ b/inventario-ventas/index.html
@@ -8,7 +8,7 @@
 
     <!-- Ajuste para GitHub Pages si se desplegara en una subcarpeta -->
     <!-- Cambia 'test-pwa-base' por el nombre de tu repo si es necesario -->
-    <base href="/test-pwa-base/">
+    <base href="/app/inventario-ventas/">
 
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
