--- a/panayko/index.html
+++ b/panayko/index.html
@@ -41,7 +41,7 @@
         }
 
         .hero-section {
-            background: url('imagen-hero-carne-seca.jpg') no-repeat center center/cover; /* Reemplaza con tu imagen de banner */
+            background: url('/imagen-hero-carne-seca.jpg') no-repeat center center/cover; /* Reemplaza con tu imagen de banner */
             color: #fff;
             height: 400px;
             display: flex;
