--- a/panayko/index.html
+++ b/panayko/index.html
@@ -110,8 +110,8 @@
 
     <footer>
         <div class="container">
-            <p>© 2023 Carne Seca by Panayko Foods. Todos los derechos reservados.</p>
-            <p>Síguenos en nuestras redes sociales:</p>
+            <p>© 2025 Carne Seca by Panayko Foods. Todos los derechos reservados.</p>
+            <p>Síguenos en nuestras redes sociales: @PanaykoFoods </p>
             <!-- Aquí irían enlaces a tus redes sociales -->
             <!-- <a href="#"><img src="icon-facebook.png" alt="Facebook"></a> -->
             <!-- <a href="#"><img src="icon-instagram.png" alt="Instagram"></a> -->
