--- a/photo-phantom/index.html
+++ b/photo-phantom/index.html
@@ -4,18 +4,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Foto Fantasma</title>
   <style>
-    #container { position: relative; width: 100%; max-width: 400px; margin: auto; }
-    video, canvas, img { width: 100%; position: absolute; top: 0; left: 0; }
-    #photo { position: relative; margin-top: 100%; }
+    #container {
+      position: relative;
+      width: 100%;
+      max-width: 400px;
+      margin: auto;
+    }
+    video, canvas, img {
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
+    }
+    #ghost {
+      opacity: 0.3;
+      z-index: 2;
+    }
+    canvas {
+      z-index: 3;
+      display: none;
+    }
+    #photo {
+      margin-top: 20px;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
+  <h2 style="text-align:center;">Modo Fantasma</h2>
   <div id="container">
-    <video id="video" autoplay muted></video>
-    <img id="ghost" src="foto_anterior.png" style="opacity: 0.3;">
+    <video id="video" autoplay muted playsinline></video>
+    <img id="ghost" src="https://via.placeholder.com/400x300.png?text=Fantasma" alt="Foto fantasma">
     <canvas id="canvas"></canvas>
   </div>
-  <button onclick="takePhoto()">Tomar Foto</button>
+
+  <div style="text-align:center; margin-top: 20px;">
+    <button onclick="takePhoto()">📸 Tomar Foto</button>
+  </div>
+
   <div id="photo"></div>
 
   <script>
@@ -23,16 +50,38 @@
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
 
-    navigator.mediaDevices.getUserMedia({ video: true }).then(stream => {
-      video.srcObject = stream;
-    });
+    // Esperar a que el video esté listo
+    navigator.mediaDevices.getUserMedia({ video: true })
+      .then(stream => {
+        video.srcObject = stream;
+        return new Promise(resolve => {
+          video.onloadedmetadata = () => {
+            video.play();
+            resolve();
+          };
+        });
+      })
+      .then(() => {
+        // Ajustar canvas al tamaño del video
+        canvas.width = video.videoWidth;
+        canvas.height = video.videoHeight;
+      })
+      .catch(err => {
+        alert('Error al acceder a la cámara: ' + err.message);
+      });
 
     function takePhoto() {
-      canvas.width = video.videoWidth;
-      canvas.height = video.videoHeight;
-      ctx.drawImage(video, 0, 0);
-      const photo = canvas.toDataURL('image/png');
-      document.getElementById('photo').innerHTML = `<img src="${photo}" width="100%">`;
+      if (video.videoWidth && video.videoHeight) {
+        canvas.width = video.videoWidth;
+        canvas.height = video.videoHeight;
+        ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+        const photoData = canvas.toDataURL('image/png');
+
+        // Mostrar la foto debajo
+        document.getElementById('photo').innerHTML = `<img src="${photoData}" width="100%">`;
+      } else {
+        alert('Cámara no lista. Espera un momento.');
+      }
     }
   </script>
 </body>
