--- a/photo-phantom/index.html
+++ b/photo-phantom/index.html
@@ -2,8 +2,14 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Foto Fantasma</title>
+  <title>Foto Fantasma - Cámara Trasera</title>
   <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 10px;
+      background: #f2f2f2;
+    }
     #container {
       position: relative;
       width: 100%;
@@ -29,18 +35,27 @@
       margin-top: 20px;
       text-align: center;
     }
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-  <h2 style="text-align:center;">Modo Fantasma</h2>
+  <h2 style="text-align:center;">Modo Fantasma - Cámara Trasera</h2>
   <div id="container">
     <video id="video" autoplay muted playsinline></video>
-    <img id="ghost" src="https://via.placeholder.com/400x300.png?text=Fantasma" alt="Foto fantasma">
+    <img id="ghost" src="https://via.placeholder.com/400x300.png?text=Fantasma" alt="Fantasma">
     <canvas id="canvas"></canvas>
   </div>
 
   <div style="text-align:center; margin-top: 20px;">
-    <button onclick="takePhoto()">📸 Tomar Foto</button>
+    <button id="snapBtn" onclick="takePhoto()">📸 Tomar Foto</button>
   </div>
 
   <div id="photo"></div>
@@ -49,26 +64,25 @@
     const video = document.getElementById('video');
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
+    const snapBtn = document.getElementById('snapBtn');
 
-    // Esperar a que el video esté listo
-    navigator.mediaDevices.getUserMedia({ video: true })
-      .then(stream => {
-        video.srcObject = stream;
-        return new Promise(resolve => {
-          video.onloadedmetadata = () => {
-            video.play();
-            resolve();
-          };
+    async function iniciarCamara() {
+      try {
+        const stream = await navigator.mediaDevices.getUserMedia({
+          video: { facingMode: { exact: "environment" } }
         });
-      })
-      .then(() => {
-        // Ajustar canvas al tamaño del video
-        canvas.width = video.videoWidth;
-        canvas.height = video.videoHeight;
-      })
-      .catch(err => {
-        alert('Error al acceder a la cámara: ' + err.message);
-      });
+        video.srcObject = stream;
+
+        video.onloadedmetadata = () => {
+          video.play();
+          canvas.width = video.videoWidth;
+          canvas.height = video.videoHeight;
+        };
+      } catch (err) {
+        alert("No se pudo acceder a la cámara trasera: " + err.message);
+        snapBtn.disabled = true;
+      }
+    }
 
     function takePhoto() {
       if (video.videoWidth && video.videoHeight) {
@@ -76,13 +90,13 @@
         canvas.height = video.videoHeight;
         ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
         const photoData = canvas.toDataURL('image/png');
-
-        // Mostrar la foto debajo
         document.getElementById('photo').innerHTML = `<img src="${photoData}" width="100%">`;
       } else {
-        alert('Cámara no lista. Espera un momento.');
+        alert('Cámara no lista aún...');
       }
     }
+
+    iniciarCamara();
   </script>
 </body>
 </html>
