--- a/photo-phantom/index.html
+++ b/photo-phantom/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Photo Phantom - Local</title>
+  <title>Photo Phantom - Local con Guardar y Copiar</title>
   <style>
     body {
       font-family: sans-serif;
@@ -11,7 +11,6 @@
       padding: 10px;
       margin: 0;
     }
-
     #container {
       position: relative;
       width: 100%;
@@ -21,7 +20,6 @@
       aspect-ratio: 4 / 3;
       overflow: hidden;
     }
-
     video,
     img,
     canvas {
@@ -30,23 +28,20 @@
       top: 0;
       left: 0;
     }
-
     #ghost {
       opacity: 0.3;
       z-index: 2;
       object-fit: contain;
+      transition: opacity 0.3s ease;
     }
-
     canvas {
       z-index: 3;
       display: none;
     }
-
     #photo {
       margin-top: 20px;
       text-align: center;
     }
-
     #snapBtn,
     #selectGhostBtn {
       margin-top: 20px;
@@ -59,7 +54,17 @@
       cursor: pointer;
       margin-right: 10px;
     }
-
+    #saveBtn,
+    #copyBtn {
+      margin: 10px 5px 0 5px;
+      padding: 10px 20px;
+      background-color: #007bff;
+      color: white;
+      font-size: 15px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
     #errorMsg {
       color: red;
       text-align: center;
@@ -68,7 +73,7 @@
   </style>
 </head>
 <body>
-  <h2 style="text-align: center">📷 Photo Phantom - Local</h2>
+  <h2 style="text-align: center">📷 Photo Phantom - Local con Guardar y Copiar</h2>
 
   <div id="container">
     <video id="video" autoplay muted playsinline></video>
@@ -128,10 +133,42 @@
 
       const photoData = canvas.toDataURL("image/png");
 
-      photoContainer.innerHTML = `<img src="${photoData}" width="100%" alt="Foto tomada" />`;
+      // Ocultar la imagen fantasma
+      ghostImg.style.opacity = 0;
 
-      // Limpia errores
+      // Mostrar la foto tomada y los botones
+      photoContainer.innerHTML = `
+        <img src="${photoData}" width="100%" alt="Foto tomada" />
+        <br/>
+        <button id="saveBtn">💾 Guardar Foto</button>
+        <button id="copyBtn">📋 Copiar al Portapapeles</button>
+      `;
+
       errorMsg.textContent = "";
+
+      // Botón Guardar
+      document.getElementById("saveBtn").onclick = () => {
+        const link = document.createElement("a");
+        link.href = photoData;
+        link.download = "photo-phantom.png";
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
+      };
+
+      // Botón Copiar
+      document.getElementById("copyBtn").onclick = async () => {
+        try {
+          const response = await fetch(photoData);
+          const blob = await response.blob();
+          await navigator.clipboard.write([
+            new ClipboardItem({ [blob.type]: blob }),
+          ]);
+          alert("Imagen copiada al portapapeles!");
+        } catch (e) {
+          alert("Error copiando al portapapeles: " + e);
+        }
+      };
     }
 
     snapBtn.addEventListener("click", takePhoto);
@@ -152,6 +189,7 @@
       const reader = new FileReader();
       reader.onload = (e) => {
         ghostImg.src = e.target.result;
+        ghostImg.style.opacity = 0.3;
         errorMsg.textContent = "";
       };
       reader.readAsDataURL(file);
